# cdsagenda

./: Dockerfile  README.md  configure_php.sh  docker-compose.yml  get_error.sh  java  tabcreate.sql
cdsagenda-4.2.9/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  UNINSTALL  config.status  configure  configure.ac  mkinstalldirs
cdsagenda-4.2.9/dbutil/: Makefile  Makefile.am  Makefile.in  dbexec  dbexec.in  dbtest  dbtest.in  synchronizefiles.php  tabcreate.sql  tabcreate.sql.in  tabdrop.sql  tabdrop.sql.in  tabfill.sql  tabfill.sql.in
cdsagenda-4.2.9/htdocs/: AgeDB.php  AgeLog.php  List.php  Makefile  Makefile.am  Makefile.in  XMLoutput.php  access.php  agenda.dtd  agendamap.php  askArchive.php  changePassword.php  displayLevel.php  fullAgenda.php  index.php  info.php  infoGroup.php  jpcache.inc  mailAgenda.php  makeExcel.php  makePDF.php  makePS.php  makevCal.php  monitor.php  monitor_change.php  pureXML.php  reportLog.php  search.php  setlink.php  userLog.php
cdsagenda-4.2.9/htdocs/config/: Makefile  Makefile.am  Makefile.in  config.php  config.php.in  config_engine.inc  config_runtime.inc
cdsagenda-4.2.9/htdocs/guide/: Makefile  Makefile.am  Makefile.in
cdsagenda-4.2.9/htdocs/guide/english/: Makefile  Makefile.am  Makefile.in  about.php  add_session.php  add_subtalk.php  add_talk.php  agenda_toolbar.php  alarm.php  attach.php  clone_agenda.php  compute_duration.php  compute_time.php  consult.php  create.php  default_format.php  edit_time_table.php  faq.php  file_linkage.php  file_upload.php  find.php  ftp.php  guideHeader.php  index.php  introduction.php  list_of_files.php  login.php  modify.php  modify_agenda.php  modify_session.php  modify_subtalk.php  modify_talk.php  other_formats.php  overview.php  print_agenda.php  pscheduler.php  scanning_request.php  search.php  session_toolbar.php  stats.php  (+2 more)
cdsagenda-4.2.9/htdocs/images/: Makefile  Makefile.am  Makefile.in  cds_user_guide.css  cds_user_guide.css.in  menu.js  style.css  style.css.in  stylemodify.css  stylemodify.css.in  xsftStyles.css
cdsagenda-4.2.9/htdocs/images/levelicons/: Makefile  Makefile.am  Makefile.in
cdsagenda-4.2.9/htdocs/manager/: Makefile  Makefile.am  Makefile.in  admin.php  adminAdd.php  adminAddGroup.php  adminAuth.php  adminCommon.inc  adminDel.php  adminEdit.php  adminEditAgenda.php  adminGroup.php  adminGroups.php  adminLocalConf.inc  adminReall.php  adminReallAgenda.php  adminRestore.php  index.php
cdsagenda-4.2.9/htdocs/manager/images/: Makefile  Makefile.am  Makefile.in
cdsagenda-4.2.9/htdocs/menus/: Makefile  Makefile.am  Makefile.in  addmenu.inc  gotomenu.inc  helpmenu.inc  index.php  mainmenu.inc  modareamenu.inc  modifymenu.inc  modifymenus.php  pdfmenu.inc  psmenu.inc  toolmenu.inc  topbar.php  usermenu.inc  viewmenu.inc
cdsagenda-4.2.9/htdocs/modification/: Makefile  Makefile.am  Makefile.in  MinWrit.php  SendAlertEmail.php  TimeTableEdit.php  addAgenda.php  addEvent.php  addGroup.php  addLecture.php  addSession.php  addSubTalk.php  addTalk.php  addUser.php  agendaFactory.php  agendaFactory_clone.php  broadcastTalk.php  calendar.php  changeAuthorization.php  checkAlarm.php  checkAlarm.php.in  cloneAgenda.php  correctAlarm.php  displayAgenda.php  eventprotection.php  file.php  fileprotection.php  htable.php  index.php  link.php  modifyAgenda.php  modifyLecture.php  modifySession.php  modifySubTalk.php  modifyTalk.php  roomBook.php  scanning.php  scanningSend.php  setUpAlarm.php  upload.php
cdsagenda-4.2.9/htdocs/objects/: Makefile  Makefile.am  Makefile.in  index.php
cdsagenda-4.2.9/htdocs/overview/: Makefile  Makefile.am  Makefile.in  PDFparam.php  PSparam.php  daydisplay.php  dayperiod.php  displayfuncs.php  getSTime.inc  hierarchy.inc  index.php  monthdisplay.php  monthperiod.php  overview.php  weekdisplay.php  weekperiod.php  yeardisplay.php  yearperiod.php
cdsagenda-4.2.9/htdocs/platform/: Makefile  Makefile.am  Makefile.in
cdsagenda-4.2.9/htdocs/platform/authentication/: Makefile  Makefile.am  Makefile.in  imapfunctions.inc  ldapfunctions.inc  sessinit.inc
cdsagenda-4.2.9/htdocs/platform/system/: Makefile  Makefile.am  Makefile.in  archive.inc  cmailfile.inc  commonfunctions.inc  file.inc  logManager.inc  parameter.inc
cdsagenda-4.2.9/htdocs/platform/template/: Makefile  Makefile.am  Makefile.in  template.inc
cdsagenda-4.2.9/htdocs/pocket/: Makefile  Makefile.am  Makefile.in  explain.php  index.php
cdsagenda-4.2.9/htdocs/stylesheets/: Makefile  Makefile.am  Makefile.in  administrative.xsl  compactnosession.xsl  date.xsl  duration.xsl  event.xsl  excel.xsl  index.php  lecture.xsl  minutes.xsl  nicecompact.xsl  nosession.xsl  seminars.xsl  standard.xsl  standard2.xsl  standardheader.xsl  transfer.xsl
cdsagenda-4.2.9/htdocs/stylesheets/palm/: Makefile  Makefile.am  Makefile.in  seminarpalm.xsl  standardpalm.xsl  standardpalmheader.xsl  talkonly.xsl
cdsagenda-4.2.9/htdocs/stylesheets/simpletext/: Makefile  Makefile.am  Makefile.in  simpletext.xsl  striphtml.xsl
cdsagenda-4.2.9/htdocs/stylesheets/tools/: Makefile  Makefile.am  Makefile.in  (+2 more)
cdsagenda-4.2.9/htdocs/template/: AGEfooter_template.inc  JSMenuTools.ihtml  JSMenuToolsAdd.ihtml  List.ihtml  Main.ihtml  Makefile  Makefile.am  Makefile.in  MinWrit.ihtml  TimeTableEdit.ihtml  addAgenda.ihtml  addAgendaNoReport.ihtml  addEvent.ihtml  addGroup.ihtml  addLecture.ihtml  addSession.ihtml  addSubTalk.ihtml  addTalk.ihtml  addUser.ihtml  addUserConfirm.ihtml  adminAdd.ihtml  adminAddGroup.ihtml  adminAuth.ihtml  adminEdit.ihtml  adminEditAgenda.ihtml  adminGroup.ihtml  adminGroups.ihtml  adminMain.ihtml  adminReall.ihtml  adminReallAgenda.ihtml  adminRestore.ihtml  age.ihtml  agendamap.ihtml  askArchive.ihtml  askArchiveElement.ihtml  broadcastTalk.ihtml  changeAuthorization.ihtml  changePassword.ihtml  cloneAgenda.ihtml  correctAlarm.ihtml  (+31 more)
cdsagenda-4.2.9/htdocs/tools/: Makefile  Makefile.am  Makefile.in  stats.php
cdsagenda-4.2.9/utils/: Makefile  Makefile.am  Makefile.in  xtxsl  xtxsl.in
cdsagenda-4.2.9/utils/XML/: Makefile  Makefile.am  Makefile.in
(+3 files in other folders)
